<resources>
    <string name="app_name">TCP Monitor</string>
    <string name="reconnect">Подключится повторно</string>
    <string name="send">Отправить пароль</string>
    <string name="time">Time</string>
    <string name="mbits">Kb/s</string>
    <string name="net">NET</string>
    <string name="address_server">Адрес сервера</string>
    <string name="port">Порт</string>
    <string name="accept">Принять</string>
    <string name="df">DF</string>
    <string name="psql">PSQL</string>
    <string name="cpu">CPU</string>
    <string name="mem">MEM</string>
    <string name="top">TOP</string>
    <string name="level">Level</string>
    <string name="iotop">IOTOP</string>
    <string name="choose_disk">Выберите диск</string>
    <string name="net_log">NET-LOG</string>
    <string name="mb">MB</string>
    <string name="processes">Процессы</string>
    <string name="download_pdf">Скачать pdf файл</string>
    <string name="no_connection">Нет соединения с сетью</string>
    <string name="server_signal">Сигнал с сервера</string>
    <string name="default_port">3981</string>
    <string name="close">Закрыть</string>
    <string name="show_last_json">Посмотреть последние json</string>
</resources>